[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benchmarks"
harness = false            # if true, the benchmark will be run with the `criterion` crate # disables rust built in benchmarks
